stock-brokerage-app-deployment.yml
 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-brokerage-app
  namespace: matthew-howard
  labels:
    app: stock-brokerage-app
spec:
  selector:
    matchLabels:
      app: stock-brokerage-app
  replicas: 1
  template:
    metadata:
      labels:
        app: stock-brokerage-app
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: stock-brokerage-app
        image: howardm46/stock-brokerage-app:0.0.1
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
