stock-brokerage-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-brokerage-app-service
spec:
  selector:
    app: stock-brokerage-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
